tests/sources/invalid/control_flow/statement_form_errors.fire
// Malformed statement forms.
x: int32 = 1;

// break outside a loop still parses; missing semicolon after break
while (x < 2) {
    x++;
    break
}  //~ ERROR FS-PARSE-0010 @1

// Bare identifier is not a statement
x;  //~ ERROR FS-PARSE-0010 @1

// Field access alone is not a statement
class Holder {
    v: int32;

    fn Holder() {
        this.v = 3;
    }
}
h: Holder = Holder();
h.v;  //~ ERROR FS-PARSE-0010 @4

// Missing expression after field assignment
h.v = ;  //~ ERROR FS-PARSE-0012 @7
//~^ ERROR FS-PARSE-0010 @8

// Missing expression after array element assignment
arr: int32[] = [1, 2];
arr[0] = ;

// Missing expression after a plain variable assignment
x = ;  //~ ERROR FS-PARSE-0012 @5
//~^ ERROR FS-PARSE-0010 @6
